Refactor backend code quality and add unit tests